hphp/test/slow/dv_array/parse-error3.php.expectf
Fatal error: An arrow ('=>') is expected here. in %s/test/slow/dv_array/parse-error3.php on line 4